<resources>
    <string name="app_name">EduSupport</string>
    <string-array name="options_array">
        <item name="hk1"> Học kì 1 </item>
        <item name="hk2"> Học kì 2</item>
    </string-array>
    <integer name="text_main">10</integer>
    <string name="test">Test hehehehehheheheehhehehehe</string>
    <string name="text_size">100pd</string>
    <string name="caidat">Cài đặt</string>
    <string name="information">Thông tin cá nhân</string>
    <string name="save">Lưu</string>
    <string name="nightmode">Chế độ sáng tối</string>
    <string name="selectLanguage">Chọn ngôn ngữ</string>
    <string name="name">Họ và tên:</string>
    <string name="idteacher">Mã số giáo viên</string>
    <string name="phone">Số điện thoại:</string>
    <string name="idClass">Mã số lớp:</string>
    <string name="onl">Trực tuyến</string>
    <string name="oldPass">Mật khẩu cũ</string>
    <string name="newPass">Nhập mật khẩu mới</string>
    <string name="renewPass">Nhập lại mật khẩu mới</string>
    <string name="hintTextChat">Nhập tin nhắn....</string>
    <string name="editSchedule">Chỉnh sửa thời khóa biểu</string>
    <string name="math">Toán học</string>
    <string name="question">Câu hỏi :</string>
    <string name="answer">Câu trả lời :</string>
    <string name="titleOfDocument">Tiêu đề tài liệu:</string>
    <string name="uploadStudyMaterials">Đăng tải tài liệu học tập</string>
    <string name="hello">Xin chào !</string>
    <string name="morning">Buổi sáng</string>
    <string name="afternoon">Buổi chiều</string>
    <string name="nameFlashcard">Tên flashcard :</string>
    <string name="desFlashcard">Mô tả flashcard :</string>
    <string name="registerUsername">Nhập username bạn đăng kí:</string>
    <string name="file">Tệp tin:</string>
    <string name="uploadFile">Đăng tải tệp tin:</string>
    <string name="subjects">Các môn học:</string>
    <string name="subject">Môn học:</string>
    <string name="typeOfFile">Loại file</string>
    <string name="studentList">Danh sách học sinh:</string>
    <string name="listOfStudents">Danh sách học sinh lớp:</string>
    <string name="classList">Danh sách lớp:</string>
    <string name="approveLeaveForm">Duyệt đơn xin phép nghỉ học:</string>
    <string name="toMe">Đến tôi</string>
    <string name="reject">Từ chối</string>
    <string name="agree">Đồng ý</string>
    <string name="leaveForm">Đơn xin phép nghỉ học</string>
    <string name="sendNoti">Gửi thông báo:</string>
    <string name="sender">Người gửi:</string>
    <string name="receiver">Người nhận:</string>
    <string name="content">Nội dung:</string>
    <string name="titleOfNoti">Tiêu đề thông báo:</string>
    <string name="attach">Tệp đính kèm:</string>
    <string name="petitiontBox">Hộp thư góp ý:</string>
    <string name="writeLeaveForm">Viết đơn xin nghỉ học:</string>
    <string name="date">Ngày:</string>
    <string name="selectDate">Chọn ngày:</string>
    <string name="reason">Lý do nghỉ:</string>
    <string name="writeReason">Nhập lý do:</string>
    <string name="me">Tôi</string>
    <string name="flashcard">Thẻ lật</string>
    <string name="anonymous">Ẩn danh</string>
    <string name="from">Từ:</string>
    <string name="to">Đến:</string>
    <string name="writeSuggestLetter">Viết thư góp ý:</string>
    <string name="search">Tìm kiếm:</string>
    <string name="personalComment">Nhận xét cá nhân:</string>
    <string name="confirmComments">Xác nhận đánh giá</string>
    <string name="rv_cmtOnStudents">Đánh giá - Nhận xét học sinh</string>
    <string name="disciplineComments">Nhận xét nề nếp:</string>
    <string name="evaluate">Đánh giá:</string>
    <string name="class_">Lớp:</string>
    <string name="cmt_rv">Đánh giá - Nhận xét</string>
    <string name="listCmt_Rv">Danh sách đánh giá - nhận xét</string>
    <string name="literature">Ngữ văn</string>
    <string name="physics">Vật lý</string>
    <string name="chemistry">Hóa học</string>
    <string name="biology">Sinh học</string>
    <string name="history">Lịch sử</string>
    <string name="geography">Địa lý</string>
    <string name="english">Tiếng anh</string>
    <string name="it">Tin học</string>
    <string name="civicEducation">Giáo dục công dân</string>
    <string name="physicalEducation">Giáo dục thể chất</string>
    <string name="confirmScores">Xác nhận nhập điểm</string>
    <string name="inputScore">Nhập điểm:</string>
    <string name="titleFlashcard">Tiêu đề flashcard:</string>
    <string name="addNewStudent">Thêm học sinh mới</string>
    <string name="idStudent">"Mã số học sinh: "</string>
    <string name="nameNewStudent">Họ và tên học sinh mới:</string>
    <string name="confirm">Xác nhận</string>
    <string name="addNewClass">Thêm lớp học mới</string>
    <string name="inputScoreper">Nhập điểm cá nhân:</string>
    <string name="nameClass">Tên lớp:</string>
    <string name="slots">Số lượng:</string>
    <string name="feedback">Thư góp ý</string>
    <string name="studyResults">Kết quả học tập</string>
    <string name="status_agree">Trạng thái: đã đồng ý</string>
    <string name="register">Đăng ký</string>
    <string name="password">Mật khẩu</string>
    <string name="msg">Nhắn tin</string>
    <string name="teacher">Giáo viên</string>
    <string name="student">Học sinh</string>
    <string name="parent">Phụ huynh</string>
    <string name="mailTeacher">Email giáo viên</string>
    <string name="forgotPassword">Quên mật khẩu ?</string>
    <string name="clickHere">Lấy lại ngay</string>
    <string name="login">Đăng nhập</string>
    <string name="registerMail">Đăng ký</string>
    <string name="or">hoặc</string>
    <string name="loginGg">Đăng nhập bằng Google</string>
    <string name="system">Hệ thống</string>
    <string name="logout">Đăng xuất</string>
    <string name="cont">Tiếp tục học</string>
    <string name="exit">Thoát</string>
    <string name="searchByClassName">Tìm theo lớp</string>
    <string name="teacherClasses">Các lớp của giáo viên:</string>
    <string name="edit">Chỉnh sửa</string>
    <string name="del">Xóa</string>
    <string name="down">Tải tài liệu.</string>
    <string name="share">Chia sẻ tài liệu.</string>
    <string name="delMaterials">Xóa tài liệu.</string>
    <string name="editMaterialsName">Chỉnh sửa tên tài liệu.</string>
    <string name="schedule">Xem thời khóa biểu</string>
    <string name="editNameFlashcard">Chỉnh sửa tên flashcard</string>
    <string name="delFlashcard">Xóa flashcard</string>
    <string name="shareFlashcard">Chia sẻ flashcard</string>
    <string name="reviewStudent">Đánh giá học sinh</string>
    <string name="seeLeaveform">Xem đơn xin nghỉ học</string>
    <string name="addClass">Thêm lớp học</string>
    <string name="seeParentOpinion">Xem góp ý phụ huynh</string>
    <string name="seenNoti">Xem thông báo</string>
    <string name="materials">Tài liệu</string>
    <string name="seeScore">Xem điểm</string>
    <string name="seeReview">Xem nhận xét</string>
    <string name="cmtTeacher">Góp ý giáo viên</string>
    <string name="listpermitapp">Danh sách đơn xin phép</string>
    <string name="functionList">Danh sách chức năng</string>
    <string name="classMng">Quản lý lớp học</string>
    <string name="notify">Thông báo</string>
    <string name="stdCmt">NHẬN XÉT HỌC SINH</string>
    <string name="contentComment">Nội dung nhận xét :</string>
    <string name="reviewer">Người nhận xét :</string>
    <string name="idParents">Mã số phụ huynh</string>
    <string name="idStd">Mã số sinh viên</string>

</resources>