<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/edit_name"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/file"
        android:textColor="@color/textColor" />


    <LinearLayout
        android:id="@+id/btn_upNewfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:background="@drawable/fullbutton_background"
        android:elevation="10dp"
        android:gravity="center"
        android:theme="@style/Base.Theme.EduSuport">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/uploadFile"
            android:textColor="@color/black"/>

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/icon_upfile" />
    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/titleOfDocument"
        android:textColor="@color/textColor"/>

    <EditText
        android:id="@+id/txtTenFile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:textColor="@color/textColor"/>


</LinearLayout>