<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".activity.ThemHocSinhActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:elevation="10dp"
            android:background="@drawable/button_background">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="20dp">

                <ImageButton
                    android:id="@+id/btnBackHocSinh"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/fullbutton_background"
                    android:padding="10dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/back_icon" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/addNewStudent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <ImageView
                    android:layout_centerInParent= "true"
                    android:layout_width= "40dp"
                    android:layout_height= "40dp"
                    android:src="@drawable/avt1"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingLeft="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginBottom="1dp"
                        android:text="@string/hello"
                        android:textSize="10dp"
                        />

                    <TextView
                        android:id="@+id/txvTenGV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:text="Giáo viên Nguyễn Văn A"
                        android:textColor="@color/black"
                        android:textSize="15dp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:background="@drawable/fullbutton_background"
            android:elevation="10dp"
            android:layout_margin="20dp"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/idStudent" />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:hint="@string/idStudent"
                app:startIconDrawable="@drawable/img_id">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    style="@style/textColor"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/nameNewStudent" />


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:hint="@string/nameNewStudent"
                app:startIconDrawable="@drawable/img_id">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_hocsinh"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    style="@style/textColor"/>
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/btnXacNhanHs"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:text="@string/confirm">
            </Button>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>