<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.DanhSachHocSinh">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:elevation="10dp"
      android:layout_marginBottom="10dp"
      android:background="@drawable/button_background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        style="@style/itemHomeColor">
      <ImageButton
          android:layout_width="40dp"
          android:layout_height="40dp"
          android:background="@drawable/fullbutton_background"
          android:padding="10dp"
          android:src="@drawable/back_icon"
          android:scaleType="fitCenter"
          style="@style/itemHomeColor"
          />
      <TextView
          android:layout_marginLeft="5dp"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:text="@string/studentList"
          android:textColor="@color/black"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        style="@style/itemHomeColor">

      <ImageView
          android:layout_centerInParent= "true"
          android:layout_width= "40dp"
          android:layout_height= "40dp"
          android:src="@drawable/ava"/>

      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:orientation="vertical"
          android:paddingLeft="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginBottom="1dp"
            android:text="@string/hello"
            android:textSize="10dp"
            style="@style/textColor"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="Giáo viên Nguyễn Văn A"
            style="@style/textColor"
            android:textSize="15dp"
            android:textStyle="bold" />
      </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:text="@string/listOfStudents"
          android:textColor="@color/black"/>

      <TextView
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:text="11A2"
          android:textColor="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
    </LinearLayout>

    <ListView
        android:id="@+id/lsvDanhSachHS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/backgroundColor"/>

  </LinearLayout>

  <ImageView
      android:layout_width="67dp"
      android:layout_height="60dp"
      android:layout_alignParentEnd="true"
      android:layout_alignParentBottom="true"
      android:layout_marginEnd="36dp"
      android:layout_marginBottom="36dp"
      android:src="@drawable/ic_add"/>
  </RelativeLayout>